add_hackerrank(solve-me-first solve-me-first.cpp)
add_hackerrank(simple-array-sum simple-array-sum.cpp)
add_hackerrank(compare-the-triplets compare-the-triplets.cpp)
add_hackerrank_py(a-very-big-sum.py)
add_hackerrank_py(diagonal-difference.py)
add_hackerrank_py(plus-minus.py)
add_hackerrank_py(staircase.py)
add_hackerrank_py(mini-max-sum.py)
add_hackerrank_py(pairs.py)
add_hackerrank_py(birthday-cake-candles.py)
add_hackerrank_py(time-conversion.py)
add_hackerrank_py(grading.py)
add_hackerrank_py(matrix-rotation-algo.py)
add_hackerrank_py(queens-attack-2.py)
add_hackerrank_py(apple-and-orange.py)
add_hackerrank_py(kangaroo.py)
add_hackerrank_py(between-two-sets.py)
add_hackerrank_py(game-of-stones-1.py)
add_hackerrank_py(lonely-integer.py)
add_hackerrank_py(reduced-string.py)
add_hackerrank_py(camelcase.py)
add_hackerrank_py(almost-sorted.py)
add_hackerrank_py(angry-professor.py)
add_hackerrank_py(beautiful-days-at-the-movies.py)
add_hackerrank_py(breaking-best-and-worst-records.py)
add_hackerrank_py(the-birthday-bar.py)
add_hackerrank_py(divisible-sum-pairs.py)
add_hackerrank_py(migratory-birds.py)
add_hackerrank_py(day-of-the-programmer.py)
add_hackerrank_py(bon-appetit.py)
add_hackerrank(hamming-distance hamming-distance.cpp)
add_hackerrank_py(caesar-cipher-1.py)
add_hackerrank_py(sock-merchant.py)
add_hackerrank_py(absolute-permutation.py)
add_hackerrank(counting-valleys counting-valleys.cpp)
add_hackerrank(electronics-shop electronics-shop.cpp)
add_hackerrank_py(cats-and-a-mouse.py)
add_hackerrank_py(magic-square-forming.py)
add_hackerrank(morgan-and-a-string morgan-and-a-string.c)
add_hackerrank_py(drawing-book.py)
add_hackerrank_py(the-hurdle-race.py)
add_hackerrank_py(picking-numbers.py)
add_hackerrank_py(climbing-the-leaderboard.py)
add_hackerrank_py(designer-pdf-viewer.py)
add_hackerrank_py(jumping-on-the-clouds-revisited.py)
add_hackerrank_py(find-digits.py)
add_hackerrank_py(extra-long-factorials.py)
#project(algo-fp Haskell)
#add_executable(extra-long-factorials extra-long-factorials.hs)
add_hackerrank_py(append-and-delete.py)
add_hackerrank_py(encryption.py)
add_hackerrank_py(bigger-is-greater.py)
add_hackerrank_py(kaprekar-numbers.py)
add_hackerrank_py(utopian-tree.py)
add_hackerrank_py(strange-advertising.py)
add_hackerrank_py(save-the-prisoner.py)
add_hackerrank_py(permutation-equation.py)
add_hackerrank_py(sherlock-and-squares.py)
add_hackerrank_py(library-fine.py)
add_hackerrank_py(cut-the-sticks.py)
add_hackerrank_py(non-divisible-subset.py)
add_hackerrank_py(repeated-string.py)
add_hackerrank_py(circular-array-rotation.py)
add_hackerrank_py(jumping-on-the-clouds.py)
add_hackerrank_py(equality-in-a-array.py)
add_hackerrank_py(acm-icpc-team.py)
add_hackerrank_py(taum-and-bday.py)
add_hackerrank_py(organizing-containers-of-balls.py)
add_hackerrank_py(big-sorting.py)
add_hackerrank_py(tutorial-intro.py)
add_hackerrank_py(insertionsort1.py)
add_hackerrank_py(insertionsort2.py)
add_hackerrank_py(runningtime.py)
add_hackerrank_py(quicksort1.py)
add_hackerrank_py(countingsort1.py)
add_hackerrank_py(countingsort2.py)
add_hackerrank_py(countingsort4.py)
add_hackerrank_py(closest-numbers.py)
add_hackerrank_py(find-the-median.py)
add_hackerrank_py(insertion-sort.py)
add_hackerrank(insertion-sort insertion-sort.cpp)
add_hackerrank_py(minimum-distances.py)
add_hackerrank_py(beautiful-triplets.py)
add_hackerrank_py(halloween-sale.py)
add_hackerrank_py(the-time-in-words.py)
add_hackerrank_py(chocolate-feast.py)
add_hackerrank_py(service-lane.py)
add_hackerrank_py(lisa-workbook.py)
add_hackerrank_py(flatland-space-stations.py)
add_hackerrank_py(fair-rations.py)
add_hackerrank(cavity-map cavity-map.cpp)
add_hackerrank_py(manasa-and-stones.py)
add_hackerrank_py(the-grid-search.py)
add_hackerrank_py(strange-code.py)
add_hackerrank_py(hackerrank-in-a-string.py)
add_hackerrank_py(pangrams.py)
add_hackerrank_py(happy-ladybugs.py)
add_hackerrank_py(mars-exploration.py)
add_hackerrank_py(weighted-uniform-string.py)
add_hackerrank_py(separate-the-numbers.py)
add_hackerrank_py(funny-string.py)
add_hackerrank_py(gem-stones.py)
add_hackerrank_py(alternating-characters.py)
add_hackerrank_py(beautiful-binary-string.py)
add_hackerrank_py(the-love-letter-mystery.py)
add_hackerrank_py(determining-dna-health.py)
add_hackerrank_py(string-construction.py)
add_hackerrank_py(anagram.py)
add_hackerrank_py(making-anagrams.py)
add_hackerrank_py(game-of-thrones.py)
add_hackerrank_py(two-strings.py)
add_hackerrank_py(sherlock-and-valid-string.py)
add_hackerrank_py(richie-rich.py)
add_hackerrank_py(sherlock-and-anagrams.py)
#add_hackerrank_py(common-child.py)
add_hackerrank(common-child common-child.cpp)
add_hackerrank_py(palindrome-index.py)
add_hackerrank_py(marcs-cakewalk.py)
add_hackerrank_py(grid-challenge.py)
add_hackerrank_py(icecream-parlor.py)
