add_subdirectory(warmup)
add_subdirectory(implementation)
add_subdirectory(strings)
add_subdirectory(greedy)
add_subdirectory(arrays-and-sorting)
add_subdirectory(search)
add_subdirectory(dynamic-programming)
add_subdirectory(bit-manipulation)
add_subdirectory(game-theory)
add_subdirectory(algo-debugging)
