add_hackerrank(cpp-hello-world cpp-hello-world.cpp)
add_hackerrank(cpp-input-and-output cpp-input-and-output.cpp)
add_hackerrank(c-tutorial-basic-data-types c-tutorial-basic-data-types.cpp)
add_hackerrank(cpp-variadics cpp-variadics.cpp)
add_hackerrank(bitset-1 bitset-1.cpp)
add_hackerrank(c-class-templates c-class-templates.cpp)
add_hackerrank(magic-spells magic-spells.cpp)
add_hackerrank(c-tutorial-for-loop c-tutorial-for-loop.cpp)
add_hackerrank(deque-stl deque-stl.cpp)
add_hackerrank(c-tutorial-functions c-tutorial-functions.cpp)
add_hackerrank(c-tutorial-pointer c-tutorial-pointer.cpp)
add_hackerrank(abstract-classes-polymorphism abstract-classes-polymorphism.cpp)
add_hackerrank(attribute-parser attribute-parser.cpp)
add_hackerrank(c-tutorial-stringstream c-tutorial-stringstream.cpp)
add_hackerrank(inherited-code inherited-code.cpp)
add_hackerrank(vector-sort vector-sort.cpp)
add_hackerrank(arrays-introduction arrays-introduction.cpp)
add_hackerrank(box-it box-it.cpp)
add_hackerrank(c-tutorial-strings c-tutorial-strings.cpp)
add_hackerrank(c-tutorial-struct c-tutorial-struct.cpp)
add_hackerrank(c-tutorial-class c-tutorial-class.cpp)
add_hackerrank(variable-sized-arrays variable-sized-arrays.cpp)
add_hackerrank(classes-objects classes-objects.cpp)
add_executable(exceptional-server exceptional-server.cpp)
add_hackerrank(virtual-functions virtual-functions.cpp)
add_hackerrank(vector-erase vector-erase.cpp)
add_hackerrank(cpp-lower-bound cpp-lower-bound.cpp)
add_hackerrank(cpp-sets cpp-sets.cpp)
add_hackerrank(cpp-maps cpp-maps.cpp)
add_hackerrank(prettyprint prettyprint.cpp)
add_hackerrank(operator-overloading operator-overloading.cpp)
add_hackerrank(inheritance-introduction inheritance-introduction.cpp)
add_hackerrank(rectangle-area rectangle-area.cpp)
add_hackerrank(multi-level-inheritance-cpp multi-level-inheritance-cpp.cpp)
add_hackerrank(accessing-inherited-functions accessing-inherited-functions.cpp)
add_hackerrank(cpp-class-template-specialization cpp-class-template-specialization.cpp)
add_hackerrank(overload-operators overload-operators.cpp)
add_hackerrank(attending-workshops attending-workshops.cpp)
add_hackerrank(preprocessor-solution preprocessor-solution.cpp)
