add_subdirectory(py-introduction)
add_subdirectory(py-date-time)
add_subdirectory(py-itertools)
add_subdirectory(py-sets)
add_subdirectory(closures-and-decorators)
add_subdirectory(py-basic-data-types)
add_subdirectory(py-classes)
add_subdirectory(py-built-ins)
add_subdirectory(py-functionals)
add_subdirectory(py-math)
add_subdirectory(py-strings)
add_subdirectory(errors-exceptions)
add_subdirectory(py-collections)
add_subdirectory(py-regex)
add_subdirectory(xml)
add_subdirectory(numpy)
